--- a/.npmrc
+++ b/.npmrc
@@ -4,4 +4,4 @@ always-auth=true
 registry = "https://registry.npm.taobao.org"
 
 # 配置 npm 私域镜像源为https://registry.npm.xx.org
-@rp:registry = "http://nexus.relaper.tech/repository/relaper-npm"
+@flyc:registry = "https://packages.aliyun.com/637b961d29fa4c4ab3f066f5/npm/npm-registry/"
