--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
 always-auth=true
 
 # 配置 npm 的默认镜像源为淘宝镜像源
-registry = "https://registry.npm.taobao.org"
+# registry = "https://registry.npm.taobao.org"
 
 # 配置 npm 私域镜像源为https://registry.npm.xx.org
-@flyc:registry = "https://packages.aliyun.com/637b961d29fa4c4ab3f066f5/npm/npm-registry/"
+registry = "https://packages.aliyun.com/637b961d29fa4c4ab3f066f5/npm/npm-registry"
