--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "umi dev",
     "start:prod": "DEBUG_ENV=prod umi dev",
     "build": "umi build",
+    "build:test": "rm -rf dist/ && DEBUG_ENV=test umi build",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "clean": "rm -rf node_modules **/*/node_modules",
     "lint": "eslint ."
@@ -30,16 +31,17 @@
       "prettier --parser=typescript --write"
     ]
   },
-  "peerDependencies": {
+  "dependencies": {
+    "@flc/workbench-tools": "^0.0.1",
     "ahooks": "^3.7.8",
     "antd": "^5.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "re-resizable": "^6.9.9",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
-    "umi": "^4.0.72"
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
@@ -48,6 +50,7 @@
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
+    "umi": "^4.0.83",
     "yorkie": "^2.0.0"
   },
   "author": "迦叶 <lw_murphy@163.com>"
