--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
   "files": [
     "dist"
   ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
       "prettier --write"
@@ -35,9 +32,9 @@
     "@flc/workbench-tools": "^0.0.63",
     "ahooks": "^3.7.8",
     "antd": "^5.7.0",
-    "dayjs": "^1.11.10",
     "less": "^4.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,7 +44,6 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
-    "@types/react-i18next": "^8.1.0",
     "less-loader": "^12.2.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
