--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     ]
   },
   "dependencies": {
-    "@flc/workbench-tools": "^0.0.63",
     "ahooks": "^3.7.8",
     "antd": "^5.7.0",
     "less": "^4.2.0",
@@ -37,17 +36,23 @@
     "moment": "^2.30.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.76.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "less-loader": "^12.2.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
     "umi": "^4.0.83",
+    "wagmi": "^2.15.2",
     "yorkie": "^2.0.0"
   },
   "author": "迦叶 <lw_murphy@163.com>"
