--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "umi dev",
     "start:prod": "DEBUG_ENV=prod umi dev",
-    "build": "rm -rf node_modules/ && DEBUG_ENV=prod umi build",
+    "build": "DEBUG_ENV=prod umi build",
     "build:test": "rm -rf dist/ && DEBUG_ENV=test umi build",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "clean": "rm -rf node_modules **/*/node_modules",
